--- a/index.html
+++ b/index.html
@@ -52,8 +52,9 @@
 			</TR>
 		</TABLE>	
 	</p>
-	
 	<script src="script.js"> </script>
+	
+	<p><a href="amap.html">AMAP Patte d'Oie</a></p>
 
 </body>
 </html>
