MOdif nom du script

--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
 			</TR>
 		</TABLE>	
 	</p>
-	<script src="script.js"> </script>
+	<script src="index_script.js"> </script>
 	
 	<p><a href="amap.html">AMAP Patte d'Oie</a></p>
 
