Ajout date ménage

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 		<script> document.write(new Date().toLocaleDateString()); </script>
 		
 		<TABLE BORDER="1", class="center"> 
-			<CAPTION> Planning ménage </CAPTION> 
+			<CAPTION> Planning ménage du week-end du <div id="date"></div></CAPTION> 
 			<TR>
 			 <TH> Aspi / Serpi </TH> 
 			 <TH> SdB / Toilette </TH>
