Correction des liens entre scripts et html
+ dates de distribution

--- a/amap.html
+++ b/amap.html
@@ -12,9 +12,11 @@
 
 	<p>
 		AMAP de la semaine
-		
+	</p>
+	
+	<p>
 		<TABLE BORDER="1", class="center"> 
-			
+			<CAPTION> <div id="kdate", class="center"></div> </CAPTION> 
 			<TR>
 			 <TH> Légumes </TH> 
 			 <TD> OUI </TD>
