--- a/amap.html
+++ b/amap.html
@@ -5,7 +5,7 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="CSS/style.css" />
 	
-    <title>AMAP</title>
+    <title>AMAP [PAS à JOUR]</title>
 </head>
 
 <body>	
