ajout clock climat

--- a/amap.html
+++ b/amap.html
@@ -51,6 +51,11 @@
 	</p>
 	
 	<script src="amap_script.js"> </script>
+	
+	<p>
+		Fin du monde
+		<iframe src="https://www.mcc-berlin.net/fileadmin/data/clock/carbon_clock.htm?i=3267263" style="width:600px; height:340px;"></iframe>
+	</p>
 
 </body>
 </html>
